--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "axios": "^1.7.9",
     "backend": "file:",
     "dotenv": "^16.4.7",
+    "fs-extra": "^11.3.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.84.0",
+    "openai": "^4.85.1",
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
